--- a/index.html
+++ b/index.html
@@ -33,19 +33,19 @@
             </tr>
     
             <tr>
-                <td>hola</td>
-                <td>aloh</td>
-                <td>ola</td>
+                <td>Img</td>
+                <td>#1</td>
+                <td>Descripcion</td>
             </tr>
             <tr>
-                <td>hola</td>
-                <td>aloh</td>
-                <td>ola</td>
+                <td>Img</td>
+                <td>#2</td>
+                <td>Descripcion</td>
             </tr>
             <tr>
-                <td>hola</td>
-                <td>aloh</td>
-                <td>ola</td>
+                <td>Img</td>
+                <td>#3</td>
+                <td>Descripcion</td>
             </tr>
         </table>
     </div>
